codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_priority_queue_hint_vs_status_line.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 4654
expression: terminal.backend()
---
"                                                                                                                        "
"› Test                                                                                                                  "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"  tab to queue message                                                                               100% context left  "
