codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_repo_branch_w80.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"▌ Ask Codex to do anything                                                      "
"▌                                                                               "
"▌                                                                               "
"   very-long-repository-name-with-many-segments:feature/super/long/branch/name  "
